--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -6,8 +6,7 @@
         <div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
-                <input type="text"
-                    [(ngModel)]="listFilter" />
+                <input type="text" [(ngModel)]="listFilter" />
             </div>
         </div>
         <div class="row">
@@ -20,8 +19,7 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary"
-                                (click)="toggleImage()">
+                            <button class="btn btn-primary" (click)="toggleImage()">
                                 {{showImage ? 'Hide' : 'Show'}} Image
                             </button>
                         </th>
@@ -35,19 +33,20 @@
                 <tbody>
                     <tr *ngFor="let product of filteredProducts">
                         <td>
-                            <img *ngIf="showImage"
-                                [src]='product.imageUrl'
-                                [title]='product.productName'
-                                [style.width.px]='imageWidth'
-                                [style.margin.px]='imageMargin' />
+                            <img *ngIf="showImage" [src]='product.imageUrl' [title]='product.productName' [style.width.px]='imageWidth' [style.margin.px]='imageMargin'
+                            />
                         </td>
-                        <td>{{product.productName}}</td>
+                        <td>
+                            <a [routerLink]="['/products', product.productId]">
+                                {{product.productName}}
+                            </a>
+                        </td>
                         <td>{{product.productCode | lowercase | convertToSpaces: '-' }}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:'USD':true:'1.2-2'}}</td>
-                        <td><pm-star 
-                            [rating]='product.starRating'
-                            (ratingClicked)="onRatingClicked($event)"></pm-star></td>
+                        <td>
+                            <pm-star [rating]='product.starRating' (ratingClicked)="onRatingClicked($event)"></pm-star>
+                        </td>
                     </tr>
                 </tbody>
             </table>
